Fix: Clean CORS config — List.of(), specific origins, explicit POST login permit